# splight-cli

./: .gitignore  .pre-commit-config.yaml  .snyk  Makefile  README.md  bitbucket-pipelines.yml  pyproject.toml  rename_bindings.py  requirements.txt  set_conf.py  settings.py  setup.py  snyk_code.json  snyk_dependencies.json  version.py
.github/workflows/: check_branch_version.py  check_pypi_version.py  check_version.py  code-style.yaml  developer-runner.yaml  developer.yaml  libupload.yml  manual_upload.yml  pr-check_version.yml  pr-tests.yml  pr-version.yml  pre-release.yaml  pushbuilder.yml  pushimage.yml  pushrunner.yml  release.yaml
.github/workflows/scripts/: check_branch_version.py  check_dev_version.py  check_dev_version_not_uploaded.py  check_pypi_version.py
.hooks/: black.toml
TestParameters_MultipleNotRequired-0_1/: __init__.py  a.csv  spec.json  vars.svars.yaml
builder/: Dockerfile  builder.py  configure.py  configure_requirements.txt  constants.py  docker-compose.yml  install_requirements.py  models.py  post_build.py  pull.py  requirements.txt  schemas.py  settings.py
builder/code/: Dockerfile  builder.py  configure.py
builder/configure/: configure_requirements.txt  constants.py  manager.py  settings.py
builder/webhook/: __init__.py  auth.py  client.py  schemas.py  webhook.py
cli/: __init__.py  auth.py  cli.py  client.py  config.py  constants.py  context.py  settings.py  version.py
cli/component/: __init__.py  component.py  component_logs_handler.py  deployment.py  description_spec.py  exception.py  exceptions.py  handler.py  input_spec.py  loaders.py  logs.proto  logs_pb2.py  logs_pb2.pyi  logs_pb2_grpc.py  spec.py  spec_loader.py  utils.py
cli/component/templates/: .splightignore  .splightinclude  Initialization  README  algorithm.py  auto_readme.md  client_connector.py  component.py  connector.py  main.py  network.py  server_connector.py  spec.json  test.py  tests.py
cli/component/tests/: test_component_manager.py  test_configure.py  test_create.py  test_delete.py  test_generic.py  test_initialize.py  test_pull.py  test_push.py  test_run.py  test_test.py
cli/config/: __init__.py
cli/context/: __init__.py  context.py  framework.py  workspace.py
cli/database/: __init__.py  database.py
cli/datalake/: __init__.py  datalake.py  dump_example.csv  load_example.csv
cli/datalake/tests/: load_example.csv  test_dump.py  test_list.py  test_load.py
cli/deployment/: __init__.py  deployment.py
cli/engine/: __init__.py
cli/engine/alert/: __init__.py
cli/engine/asset/: __init__.py
cli/engine/attribute/: __init__.py
cli/engine/component/: __init__.py  exceptions.py
cli/engine/datalake/: __init__.py
cli/engine/endpoint/: __init__.py  endpoint.py
cli/engine/file/: __init__.py
cli/engine/graph/: __init__.py
cli/engine/manager/: __init__.py  exceptions.py  manager.py
cli/engine/query/: __init__.py
cli/engine/secret/: __init__.py
cli/engine/setpoint/: __init__.py
cli/history/: __init__.py  history.py
cli/hub/: __init__.py  component.py  create.py  hub.py  list.py  pull.py  push.py  settings.py
cli/hub/component/: __init__.py  exceptions.py  hub_manager.py
cli/hub/storage/: settings.py  storage.py
cli/hub/templates/: Initialization  README.md  __init__.py  algorithm.py  io.py  io_client.py  io_server.py  network.py  spec.json
cli/hub/tests/: test_configure.py  test_create.py  test_generic.py  test_initialize.py  test_pull.py  test_push.py  test_run.py  test_test.py
cli/hub/utils/: __init__.py  api_requests.py  auth.py  handler.py  json.py  loader.py  template.py  validation.py  yaml.py
cli/playground/: data.py
cli/solution/: __init__.py  apply_exec.py  comparison.py  destroyer.py  exceptions.py  importer.py  models.py  plan_exec.py  replacer.py  solution.py  solution_checker.py  utils.py
cli/solution/tests/: constants.py  test_apply.py  test_destroy.py  test_import.py  test_plan.py
cli/storage/: __init__.py  storage.py
cli/testing/: __init__.py
cli/tests/: test_configure.py  test_generic.py
cli/tests/TestHub/: Initialization  __init__.py  spec.json
cli/tests/test_component/: main.py  spec.json
cli/utils/: __init__.py  api_requests.py  auth.py  handler.py  headers.py  input.py  json.py  loader.py  pprint.py  template.py  uuid.py  yaml.py
cli/workspace/: __init__.py
runner/: Dockerfile  README.md  builder.py  configure.py  docker-compose.yml  requirements.txt  runner.py
runner/splight_runner/grpc/: client.py  logs_pb2.py  logs_pb2_grpc.py
runner/splight_runner/hooks/: hook_logging.py
runner/splight_runner/interceptor/: interceptor.py  wrapper.py
runner/splight_runner/log_streamer/: log_streamer.py
splight_cli/: cli.py  constants.py  settings.py  version.py
splight_cli/component/: __init__.py  component.py  exceptions.py  loaders.py  utils.py
splight_cli/component/templates/: main.py  spec.json
splight_cli/config/: __init__.py
splight_cli/context/: __init__.py  exceptions.py  workspace.py
splight_cli/engine/: __init__.py
splight_cli/hub/: __init__.py  exceptions.py
splight_cli/solution/: __init__.py  apply_exec.py  destroyer.py  dict.py  exceptions.py  importer.py  models.py  parser.py  plan_exec.py  replacer.py  solution.py  solution_checker.py  state.py  utils.py
splight_cli/utils/: __init__.py  input.py  loader.py  pprint.py  template.py  yaml.py
splight_cli/workspace/: __init__.py
(+70 files in other folders)
