[project]
name = "splight-cli"
version = "5.6.1"
description = "Splight Command Line Interface"
readme = "README.md"
authors = [
    {name = "Splight Dev",email = "dev@splight-ae.com"}
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "case-converter==1.1.0",
    "click==8.0.4",
    "click-default-group==1.2.2",
    "colorama==0.4.4",
    "packaging==23.0",
    "pathspec==0.11.1",
    "py7zr==0.20.8",
    "pyyaml==6.0.1",
    "requests==2.32.2",
    "rich==13.0.1",
    "setuptools==80.7.1",
    "splight-lib>=5.21.0",
    "toposort>=1.10,<2.0",
    "typer==0.15.1",
]

[dependency-groups]
dev = [
    "black==24.3.0",
    "coverage>=7.3.2",
    "flake8>=6.1.0",
    "ipdb>=0.13.13",
    "ipython==8.12.2",
    "isort==5.12.0",
    "mock>=5.1.0",
    "pre-commit==3.2.2",
    "pytest>=7.4.3",
    "ruff==0.9.1",
]

[project.scripts]
splight = "splight_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 79
force-exclude = ".*/component/templates/.*py"

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::RuntimeWarning",
    "ignore::UserWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
    "ignore::pytest.PytestAssertRewriteWarning",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*/component/templates/*",
]

# Same as Black.
line-length = 79
indent-width = 4

target-version = "py311"

extend-select = ["F", "I"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
